--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,5 @@
-/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
-
-/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
 /* ==========================================================================
-   Base styles: opinionated defaults
+   Boilerplate CSS rules here, via HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com
    ========================================================================== */
 
 html {
@@ -16,16 +7,6 @@ html {
   font-size: 1em;
   line-height: 1.4;
 }
-
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * Vendor-prefixed and regular ::selection selectors cannot be combined:
- * https://stackoverflow.com/a/16982510/7133471
- *
- * Customize the background color to match your design.
- */
 
 ::-moz-selection {
   background: #b3d4fc;
@@ -37,10 +18,6 @@ html {
   text-shadow: none;
 }
 
-/*
- * A better looking default horizontal rule
- */
-
 hr {
   display: block;
   height: 1px;
@@ -50,12 +27,6 @@ hr {
   padding: 0;
 }
 
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
 audio,
 canvas,
 iframe,
@@ -64,10 +35,6 @@ svg,
 video {
   vertical-align: middle;
 }
-
-/*
- * Remove default fieldset styles.
- */
 
 fieldset {
   border: 0;
@@ -84,8 +51,50 @@ textarea {
 }
 
 /* ==========================================================================
-   Author's custom styles
+   Custom styles
    ========================================================================== */
+html{
+  font-size:10px;
+}
+
+
+h1,h2{
+  font-family: 'Raleway', sans-serif;
+  margin:0;
+  padding:0;
+}
+
+h1{
+  font-weight:300;
+  font-size:5rem;
+}
+
+h2{
+  font-weight:600;
+  font-size:2rem;
+}
+
+.hero{
+  background-color:lightgray;
+  padding:50px 0;
+}
+
+.hero__content{
+  max-width:800px;
+  margin: 0 auto;
+}
+
+section{
+  max-width:800px;
+  margin: 0 auto;
+}
+
+section p, section ul li{
+  font-size:1.6rem;
+  font-family: 'Open Sans', sans-serif;
+}
+
+
 
 /* ==========================================================================
    Helper classes
@@ -147,18 +156,6 @@ textarea {
   visibility: hidden;
 }
 
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
 .clearfix::before,
 .clearfix::after {
   content: " ";
@@ -168,12 +165,6 @@ textarea {
 .clearfix::after {
   clear: both;
 }
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
 
 @media only screen and (min-width: 35em) {
   /* Style adjustments for viewports that meet the condition */
