--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 html {
-  color: #222;
+  color:#2B292C;
   font-size: 1em;
   line-height: 1.4;
 }
@@ -58,17 +58,12 @@ html{
 }
 
 
-/* CSS HEX */
-/*--prussian-blue: #003049ff;
---maximum-red: #d62828ff;
---orange: #f77f00ff;
---maximum-yellow-red: #fcbf49ff;
---lemon-meringue: #eae2b7ff;*/
+
 
 /*HEADER*/
 
 .hero{
-  background-color:#eeeeee;
+  background-color:#F7F0EB;
   padding:150px 0 25px 0;
   margin-bottom:25px;
 }
@@ -76,6 +71,13 @@ html{
 .hero__content{
   max-width:800px;
   margin: 0 auto;
+}
+
+.hero__content p{
+  font-family: 'Raleway', sans-serif;
+  font-size:20px;
+  color:#2B292C;
+
 }
 
 .highlight{
@@ -94,16 +96,16 @@ html{
   bottom:5px;
 }
 
-h1,h2,h3{
-  font-family: 'Raleway', sans-serif;
+h1,h2{
+  font-family: 'Playfair Display', serif;
+  color:#2B292C;
 }
 
 h1{
-  font-weight:300;
-  font-size:4rem;
+  font-weight:bold;
+  font-size:78px;
   margin:0;
   padding:0;
-  color:#000000;
 }
 
 h2{
@@ -116,6 +118,7 @@ h3{
   font-weight:600;
   font-size:2rem;
   margin-top:25px;
+  font-family: 'Raleway', sans-serif;
 }
 
 
@@ -127,7 +130,7 @@ section{
 
 section p, section ul li{
   font-size:1.6rem;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 
